SMåfix med diverse tabeller mm.

--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -1749,7 +1749,7 @@ till måndagen klockan 00:00. Många börjar redan på fredagskvällen och avslu
 på söndagseftermiddagen.
 
 Sändningar under denna tid förekommer från ocertifierade scouter som lånar
-klubbsignal, har en tillfällig signal utdelad och så vidare. Ibland lånar
+klubbsignal, har en tillfällig signal, eller liknande. Ibland lånar
 enskilda sändaramatörer ut sina signaler och det finns också ganska många
 scouter som har eget amatörradiocertifikat. Många gånger är det också så
 kallade tillfälliga "event-signaler" som är i luften.
@@ -1760,14 +1760,16 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 
 \subsection{Nordiska scoutfrekvenser VHF}
 
-\begin{center}
+\begin{table}[h]
+\centering
 \begin{tabular}{lrr}
 	\textbf{Mode} & \textbf{Frekvens} & \textbf{Kanal} \\ \hline
 	FM            &      145.425  MHz &   V34 \\
 	SSB           &      144.240  MHz &  \\
 	CW            &      144.050  MHz &
 \end{tabular}
-\end{center}
+\caption{Scouters JOTA-frekvenser på 2\,m-bandet}
+\end{table}
 
 \subsection{Scoutfrekvenser HF}
 
