--- a/tex/kap-trafik.tex
+++ b/tex/kap-trafik.tex
@@ -77,6 +77,8 @@ till en vana att lämna luckor så ofta som möjligt.
 \textbf{Nödtrafik har alltid prioritet} och måste respekteras på alla
 frekvenser.
 
+\clearpage
+
 \section{Signaler och anrop}
 
 \subsection{Landsprefix}
