Förord och tryckortssida uppdaterad.

--- a/rhb.tex
+++ b/rhb.tex
@@ -67,7 +67,8 @@
 \centerline{\includegraphics[width=\paperwidth]{logo/rubrikbild}}
 \begin{flushright}
 	\Huge{\bfseries{\TitleText}} \\[3mm]
-	\Large{\bfseries{\SubtitleText}}
+	\Large{\bfseries{\SubtitleText}}\\[3mm]
+        \normalsize{\DokVersion}
 \end{flushright}
 
 \newpage
@@ -76,13 +77,11 @@
 
 \noindent \TitleText
 
-\vspace{1 em}
-
 \noindent \SubtitleText
 
 \vspace{1 em}
 
-\noindent Version \DokVersion
+\noindent \DokVersion
 
 \noindent ISBN: \ISBN
 
