--- a/tex/forord.tex
+++ b/tex/forord.tex
@@ -3,12 +3,9 @@
 
 \section*{Förord}
 
-Jag heter Täpp Anders Sikvall och har haft ett radiointresse sedan barnsben.
-När jag gick i gymnasiet tog jag amatörradiolicens efter dåtidens regler och
-har sedan haft amatörradio som en hobby. Jag jobbar också professionellt med
-radiosystem och på fritiden tycker jag om att gå i skog och mark (och köra
-portabelt). Jag utbildar också nya radioamatörer och är även en av SSA:s
-provförrättare.
+Radiohandboken fyller 10 år i år! Den första utgåvan, eller version
+1.0.0 publicerades på nätet 1:a november 2015. Det är fasen inte så
+illa pinkat ändå!
 
 Denna version av radiohandboken innehåller en stor mängt förändringar mot
 tidigare versioner. Dels har jag valt att ta bort de specifika VHF- och
