Lagt till stycke om dB, dBi och dBd

--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -1642,6 +1642,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 
 \begin{longtable}{rlllrlrrl}
 	\bf Dist & \bf Signal & \bf Mod  & \bf Ort      & \bf Frekvens & \bf Lokator & \bf MASL & \bf MAGL & \bf Riktning \\ \hline
+	\endhead
 	       0 & SKØCT/B    & CW       & Stockholm    &    5760.9030 & JO99JX      &       60 &       30 & Omni         \\
 	       0 & SKØCT/B    & CW       & Stockholm    &   10368.8400 & JO89XJ      &       50 &       20 & Omni         \\
 	       0 & SKØEN/B    & CW       & Väddö        &   10368.8470 & JO99JX      &       60 &       30 & 360°         \\
@@ -1695,7 +1696,7 @@ gemensam hårdvara och synkroniseras mot tidsreferens. Fyrar kan vara offline
 av olika skäl, kontrollera mot IBP:s hemsida om du inte hör en fyr du brukar
 höra.
 
-Tabellen nedan visar anropssignaler och första sändningsslotten som fyren
+Tabellen nedan visar anropssignaler och första sändningssloten som fyren
 sänder, dvs SCHED för olika fyrar och frekvenser.
 
 \subsection{Lista över IBP-fyrar}
@@ -1705,7 +1706,6 @@ sänder, dvs SCHED för olika fyrar och frekvenser.
 \begin{tabular}{llrrrrr}
 \textbf{Signal} & \textbf{QTH} & \textbf{14 100} & \textbf{18 110} &
                 \textbf{21 150} & \textbf{24 930} & \textbf{28 200} \\ \hline
-
 4U1UN  & United Nations & 00:00  & 00:10  & 00:20  & 00:30  & 00:40  \\
 VE8AT  & Canada         & 00:10  & 00:20  & 00:30  & 00:40  & 00:50  \\
 W6WX   & United States  & 00:20  & 00:30  & 00:40  & 00:50  & 01:00  \\
@@ -1777,7 +1777,6 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 \centering
 \begin{tabular}{rrll}
 	\textbf{Band} & \textbf{Frekvens} & \textbf{Trafik} & \textbf{Not} \\ \hline
-
                80 & 3 570  & CW  &             \\
 	              & 3 940  & SSB & Ej region 2 \\
 	              & 3 690  & SSB &             \\ \hline
