Ny font: fourier

--- a/rhb.tex
+++ b/rhb.tex
@@ -21,7 +21,9 @@
 \usepackage[a4paper]{geometry}         % Särskilda dokumentinställningar
 \usepackage[utf8]{inputenc}            % Indata som UTF-8 är väldigt bra för t.ex. svenska
 \usepackage[T1]{fontenc}               % Fontkodning enligt modern standard
-\usepackage{fbb}                       % En font inspirerad av Bembo
+%\usepackage{fbb}                       % En font inspirerad av Bembo
+%\usepackage[adobe-utopia]{mathdesign}  % Font: Adobe Utopia
+\usepackage{fourier}
 \usepackage[swedish]{babel}            % Svensk avstavning och mycket mer
 \usepackage[colorlinks,
   linkcolor=black,
@@ -54,7 +56,6 @@
 \usepackage{todonotes}                 % Kunna lägga in att-göra i dokumentet
 \renewcommand{\arraystretch}{1.15}     % Sätt ett mer lämpligt avstånd
 %\headheight=20pt                       % Justera dokumentets huvud
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% DOKUMENT
