--- a/tex/forord.tex
+++ b/tex/forord.tex
@@ -49,7 +49,7 @@ Täpp-Anders Sikvall\\
 \section*{Licens}
 
 Denna handbok är författad av Täpp-Anders Sikvall, SM5UEI. Den är
-släppt under en creative commons licens som kallas för CC BY-NC-SA.
+släppt under en creative commons licens som kallas för CC BY-NC-SA 4.0.
 
 I korthet innebär det att du får distribuera och trycka upp materialet
 hur du vill, dela med dig av det men inte för kommersiella ändamål. Du
