--- a/tex/kap-teknik.tex
+++ b/tex/kap-teknik.tex
@@ -12,9 +12,10 @@ känna till.
 
 \section{Decibel}
 
-Decibel är en logaritmisk skala som bygger på tiologaritmen. Från början
-använde man begreppet Bel [B] (efter Alexander Graham Bell) men det blir ofta
-decimaltal så i stället så kör man decibel. Det går 10 dB på 1 B.
+Decibel är ett grundläggande begrepp inom radiovärlden och är i grunden en
+logaritmisk skala som bygger på tiologaritmen. Från början använde man
+begreppet Bel [B] (efter Alexander Graham Bell) men det blir ofta decimaltal
+så i stället så kör man decibel. Det går 10 dB på 1 B.
 
 Definitionen på decibel är enligt följande:
 
@@ -613,7 +614,7 @@ några år. I stället har ju Internet tagit över som nyhetsförmedlare.
 
 \subsection{Ultrakortvåg (UKV) eller väldigt hög frekvens (VHF)}
 
-Förbindeleser med låg effekt och små antenner, oberoende av jonosfären men då
+Förbindelser med låg effekt och små antenner, oberoende av jonosfären men då
 endast i form av frirumsutbredning, dvs fram till horisonten och under
 påverkan av terränghinder mm. Särskilt utmärkande för UKV är att rymdvåg
 saknas, markvågsdämpningen till lands är total och kommunikation på högre
@@ -784,7 +785,7 @@ följande variant:
 Där $PL_m$ är sträckdämpningen vid marken. Faktorn $k$ kan uppskattas enligt
 följande tabell:
 
-\begin{table}[h]
+\begin{table}[H]
 	\begin{centering}
 		\begin{tabular}{r|l}
 			\textbf{k} & \textbf{Beskrivning} \\ \hline
