Appendix: Prepping och radio

--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -74,6 +74,7 @@ efter frekvens. Detta gör att listan blir en smula oordnad.
 \end{longtable}
 
 \subsection{Åkeribandet 69 MHz}
+\label{69-MHz}
 
 Sedan några år tillbaka finns nu ett nytt band som kan användas för privat
 landmobil radio (PMR). Bandet kallas allmänt för 69\,MHz-bandet och har blivit
@@ -123,6 +124,7 @@ inom Västra Götaland och Hallands län.
 \end{table}
 
 \subsection{Jakt och jordbruksfrekvenser 155 MHz}
+\label{155-MHz}
 
 Observera att kanalnumren som är traditionella och frekvenserna inte
 kommer helt i ordning. Fyra kanaler är markerade med $^R$ och har
@@ -155,7 +157,7 @@ särskilda restriktioner på svenskt innanvatten och territorialvatten.
 \normalsize
 
 \subsection{Öppna PMR-bandet på 446 MHz}
-
+\label{446-MHz}
 I nya författningssamlingen står det uttryckligen att
 repeateranvändning är förbjuden. De exakta kanalerna har också inte
 heller bestämts utan bandet är upplåtet
@@ -180,22 +182,24 @@ användas för att inte störa närliggande kanaler. Kanalrastret är
 \begin{table}[H]
 \centering
 \begin{tabular}{rll|rll}
-	\textbf{Frekvens} & \textbf{Benämning} & \textbf{Rek. Anv.}&
-	\textbf{Frekvens} & \textbf{Benämning} & \textbf{Rek. Anv.}      \\ \hline
-	446,00625 & PMR446 K1          & PMR                                   &          446,10625 & PMR446 K9\ \,\,/D1       & DPMR \\
-	446,01875 & PMR446 K2          & PMR                                   &          446,11875 & PMR446 K10/D2      & DPMR \\
-	446,03125 & PMR446 K3          & PMR                                   &          446,13125 & PMR446 K11/D3      & DPMR \\
-	446,04375 & PMR446 K4          & PMR                                   &          446,14375 & PMR446 K12/D4      & DPMR \\
-	446,05625 & PMR446 K5          & PMR                                   &          446,15625 & PMR446 K13/D5      & DPMR \\
-	446,06875 & PMR446 K6          & PMR                                   &          446,16875 & PMR446 K14/D6      & DPMR \\
-	446,08125 & PMR446 K7          & PMR                                   &          446,18125 & PMR446 K15/D7      & DPMR \\
-	446,09375 & PMR446 K8          & PMR                                   &          446,19375 & PMR446 K16/D8      & DPMR
+	\textbf{Frekvens} & \textbf{Benämning} & \textbf{Rek. Anv.} & \textbf{Frekvens} & \textbf{Benämning} & \textbf{Rek. Anv.} \\ \hline
+	        446,00625 & PMR446 K1          & PMR                &         446,10625 & PMR446 K9\ \,\,/D1 & DPMR               \\
+	        446,01875 & PMR446 K2          & PMR                &         446,11875 & PMR446 K10/D2      & DPMR               \\
+	        446,03125 & PMR446 K3          & PMR                &         446,13125 & PMR446 K11/D3      & DPMR               \\
+	        446,04375 & PMR446 K4          & PMR                &         446,14375 & PMR446 K12/D4      & DPMR               \\
+	        446,05625 & PMR446 K5          & PMR                &         446,15625 & PMR446 K13/D5      & DPMR               \\
+	        446,06875 & PMR446 K6          & PMR                &         446,16875 & PMR446 K14/D6      & DPMR               \\
+	        446,08125 & PMR446 K7          & PMR                &         446,18125 & PMR446 K15/D7      & DPMR               \\
+	        446,09375 & PMR446 K8          & PMR                &         446,19375 & PMR446 K16/D8      & DPMR
 \end{tabular}
 \caption{PMR-frekvenser}
 \label{tab:pmr-frekvenser}
 \end{table}
 
-\subsection{Kortdistansradio (KDR, SRBR)}
+\subsection{Kortdistansradio (KDR, SRBR) på 444 MHz}
+\label{444-MHz}
+\label{KDR}
+\label{SRBR}
 
 Kallas även SRBR för Short Range Business Radio.  Den traditionella
 frekvenslistan ser ut som följer. En ny variant med frekvenser för
