--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -65,6 +65,26 @@ tidpunkter och det kan vara viktigare att lyssna exempelvis på degtiderna
 exempelvis 09:00, 12:00, 15:00 och 18:00 än på natten. Sannolikheten att folk
 behöver vila är högre 03:00.
 
+\subsection{En bra tidsreferens}
+
+Det är bra att ha en exakt klocka även om mobilnätet slutar att fungera.
+Mobiler med GNSS\footnote{Global Navigation Satellite System, exempelvis GPS,
+Galileo, Beidou och Glonass}-mottagare har som regel möjlighet att via appar
+visa exakt tid. Vanliga kvartsur är utmärkta tidhållare och behöver i regel
+bara justeras några sekunder på en månad.
+
+Klockor som baseras på den tyska radiosignalen DCF77\footnote{Sänder
+tidsreferens över långvåg från Mainflingen i Tyskland. DCF står för
+Deutschland, C för långvågssignal och F för frankfurt. 77 är frekvensen (eg.
+77,5 kHz).} är också ett utmärkt val, dessa fungerar ungefär upp till höjd med
+Gävle men inte i den norra änden av landet då vi hamnar utanför
+radiohorisonten.
+
+Har du möjlighet att lyssna på utländska radiostationer på AM-banden
+exempelvis över kortvåg så identifierar de sig normalt varje timme. Det finns
+dock inte så många AM-stationer kvar som vi hör längre men på natten kan vi
+höra långväga sådana på kortvågsbanden.
+
 \section{Vad kan vi göra?}
 
 Färutom att själva söka kontakt med andra och förstå vad som sker, om vi ska
@@ -82,6 +102,7 @@ andra radioamatörer som då kan förmedla meddlenanden.
 
 Vi kan hjälpa och bistå kommun och andra med teknisk kompetens och kunskap men
 även utrustning och möjligheter att kommunicera i en kris.
+
 
 \section{Vikten av övning}
 
